--- a/.github/workflows/run_analysis.yml
+++ b/.github/workflows/run_analysis.yml
@@ -2,8 +2,8 @@ name: Run X Feed Analysis
 
 on:
   schedule:
-    # Runs every 20 minutes
-    - cron: '*/20 * * * *'
+    # Runs every 2 hours
+    - cron: '0 */2 * * *'
   workflow_dispatch:  # Keep manual trigger option
 
 jobs:
@@ -12,11 +12,18 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for proper git operations
     
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+        
+    - name: Configure Git
+      run: |
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
         
     - name: Install dependencies
       run: |
@@ -36,6 +43,8 @@ jobs:
       
     - name: Run analysis
       run: python run_analysis.py
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Upload analysis reports
       if: always()  # Run even if analysis fails
